# vectkv-python

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  state.json
vectkv/: exceptions.py  handler.py  main.py  schema.py  server.py  types.py  wal.py
vectkv/api/: response.py  router.py  service.py
vectkv/api/pages/: router.py  service.py
vectkv/api/pages/schemas/: create_page_schema.py  get_page_response_schema.py  search_vectors_schema.py  set_ef_search_schema.py
vectkv/api/schemas/: create_page_schema.py
vectkv/api/vectors/: router.py  service.py
vectkv/api/vectors/schemas/: add_vector_schema.py
